src/test/ui/issue-26093.stderr
error[E0070]: invalid left-hand side expression
  --> $DIR/issue-26093.rs:13:9
   |
LL |         $thing = 42;
   |         ^^^^^^^^^^^ left-hand of expression not valid
...
LL |     not_a_place!(99);
   |     ----------------- in this macro invocation

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0070"
